# termban

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
.puku/: puku-embeddings.db  puku-embeddings.db-shm  puku-embeddings.db-wal
src/: main.rs  model.rs  storage.rs  ui.rs
wix/: main.wxs
