[package]
name = "termban"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/rafidahmed816/termban"
homepage = "https://github.com/rafidahmed816/termban"
readme = "README.md"
authors = ["Rafid Ahmed <rafidahmed816@gmail.com>"]
license = "MIT"
description = "A terminal Kanban board built with Ratatui"
keywords = ["kanban", "terminal", "tui", "ratatui"]
categories = ["command-line-utilities"]



[package.metadata.deb]
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/termban", "usr/bin/termban", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/termban", dest = "/usr/bin/termban", mode = "755" }
]



[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"


